Extend dashboard with administrators module link

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,10 @@
-<h1>Administrators</h1>
+<h1>The dashboard</h1>
 
 <p>
 This is the dashboard. It will contain links to other modules (based on the admin's privs).
 </p>
+<div class="dashboard">
+    <ul>
+        <li><a href="<%= administratorsPath() %>" class="btn btn-info">Administrators</a></li>
+    </ul>
+</div>
