--- a/templates/administrators/new.html
+++ b/templates/administrators/new.html
@@ -2,7 +2,11 @@
   <h1>New Administrator</h1>
 </div>
 
-<%= form_for(administrator, {action: administratorsPath(), method: "POST"}) { %>
-  <%= partial("administrators/form.html") %>
-  <a href="<%= administratorsPath() %>" class="btn btn-warning" data-confirm="Are you sure?">Cancel</a>
+<%= if (adminHasPrivFor(current_admin.Privs, "Users")) { %>
+    <%= form_for(administrator, {action: administratorsPath(), method: "POST"}) { %>
+      <%= partial("administrators/form.html") %>
+      <a href="<%= administratorsPath() %>" class="btn btn-warning" data-confirm="Are you sure?">Cancel</a>
+    <% } %>
+<% } else { %>
+    <%= partial("administrators/no_priv.html") %>
 <% } %>
