--- a/templates/administrators/_priv_form.html
+++ b/templates/administrators/_priv_form.html
@@ -2,6 +2,11 @@
 Setup privileges
 </p>
 <pre><%= privileges %></pre>
-    <%= for (privilege) in privileges { %>
+<pre><%= administrator %></pre>
+<%= for (privilege) in privileges { %>
+    <%= if (adminHasPrivFor(administrator.Privs, privilege.Label)) { %>
+        <%= f.CheckboxTag("privilege_id", {label: privilege.Label, checked: privilege.ID, id:privilege.ID, value: privilege.ID}) %>
+    <% } else { %>
         <%= f.CheckboxTag("privilege_id", {label: privilege.Label, checked: privilege.ID, id:privilege.ID}) %>
     <% } %>
+<% } %>
